apps/prowlarr/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 2Gi
        storageClassName: nishir-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
