apps/prowlarr/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  hostnames:
    - prowlarr.i.shikanime.studio
  parentRefs:
    - name: prowlarr
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-redirect
spec:
  hostnames:
    - prowlarr.i.shikanime.studio
  parentRefs:
    - name: prowlarr
      sectionName: http
